--- a/Torrent/.gitignore
+++ b/Torrent/.gitignore
@@ -1,11 +1,8 @@
 *.iml
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/gradle.xml
-.idea/libraries
-.idea/uiDesigner.xml
 .gradle
 gradlew
 gradlew.bat
 gradle/
 build/
+downloads/
+.idea/
